If we detect that we can use the JIT, don't use computed opcode lookups https://bugs.webkit.org/show_bug.cgi?id=74899 <rdar://problem/10604551>

Reviewed by Gavin Barraclough.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::Interpreter):
(JSC::Interpreter::initialize):
(JSC::Interpreter::privateExecute):
* interpreter/Interpreter.h:
(JSC::Interpreter::getOpcode):
(JSC::Interpreter::getOpcodeID):
* runtime/JSGlobalData.cpp:
(JSC::JSGlobalData::JSGlobalData):



Canonical link: https://commits.webkit.org/91654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103292 268f45cc-cd09-0410-ab3c-d52691b4dbfc